# macro-player

./: BUILDING.md  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md  vcpkg.json
cmake/: install-config.cmake  install-rules.cmake  variables.cmake
example/: CMakeLists.txt
include/macro-player/: macro-player.hpp  macro_player.h  macro_recorder.h
scripts/: update_source.sh
source/: CMakeLists.txt  Recorder.cpp  macro-player.cpp  macro_player.cpp  macro_recorder.cpp
test/: CMakeLists.txt
test/source/: macro-player_test.cpp
